--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,3 @@
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=EHardwareClass::Mobile
-DefaultGraphicsPerformance=EGraphicsPreset::Scalable
-
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/Sheepville")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/Sheepville")
@@ -125,5 +121,11 @@ GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
 bExplicitCanvasChildZOrder=True
+
+[/Script/HardwareTargeting.HardwareTargetingSettings]
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
+DefaultGraphicsPerformance=Scalable
+AppliedDefaultGraphicsPerformance=Scalable
 
 
