Press Tab to open/close inventory also added a dummy blueprint for items

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -116,7 +116,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/MobileStarterContent/Maps/Minimal_Default.Minimal_Default
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/Gamemode/TestGameMode.TestGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
@@ -127,5 +127,3 @@ TargetedHardwareClass=Mobile
 AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
-
-
